fixed visual bug on mobile, caused by the button

--- a/client/src/components/StartPage/duden.css
+++ b/client/src/components/StartPage/duden.css
@@ -23,17 +23,17 @@
   font-size: 2em;
 }
 
-#Wörterbuch div {
-  text-align: start;
-  margin: auto 3%;
-  font-size: 1.2em;
-}
-
 #Wörterbuch form button {
   font-size: 1.7em;
   width: 20%;
   padding: 0 2px;
   margin: auto;
+}
+
+#Wörterbuch div {
+  text-align: start;
+  margin: auto 3%;
+  font-size: 1.2em;
 }
 
 .searchResultDiv a,
@@ -68,5 +68,15 @@
 @media (max-width: 1100px) {
   #Wörterbuch {
     width: 100%;
+  }
+
+  #Wörterbuch form input {
+    width: 70%;
+    font-size: 2em;
+  }
+
+  #Wörterbuch form button {
+    font-size: 1.6em;
+    width: 20%;
   }
 }
